WIP: initial company API, can just 404 a GET at this point.

--- a/api.yml
+++ b/api.yml
@@ -19,11 +19,11 @@ basePath: /v1
 schemes:
   - https
 produces:
-  - application/vnd.opencompany.company+json;version=1
-  - application/vnd.opencompany.report+json;version=1
+  - application/vnd.open-company.company+json;version=1
+  - application/vnd.open-company.report+json;version=1
 consumes:
-  - application/vnd.opencompany.company+json;version=1
-  - application/vnd.opencompany.report+json;version=1
+  - application/vnd.open-company.company+json;version=1
+  - application/vnd.open-company.report+json;version=1
 
 #
 # Security
