--- a/travis.yml
+++ b/travis.yml
@@ -1,5 +1,6 @@
 language: clojure
 lein: lein2
+script: ./opt/install-rethinkdb.sh
 # Ideally, this would be: https://github.com/travis-ci/travis-ci/issues/4411
 # addons:
 #   apt:
