--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: clojure
 lein: lein2
 script: ./opt/install-rethinkdb.sh
-# Ideally, this would be: https://github.com/travis-ci/travis-ci/issues/4411
+# Ideally, this would be: https://github.com/travis-ci/travis-ci/issues/4411 so we could be on new container instance http://docs.travis-ci.com/user/migrating-from-legacy
 # addons:
 #   apt:
 #     sources:
