--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
 language: clojure
 lein: lein2
+cache:
+  directories:
+    - $HOME/.m2
+
+# Ideally, this would be: https://github.com/travis-ci/travis-ci/issues/4411 so we could be on new container instance http://docs.travis-ci.com/user/migrating-from-legacy
 sudo: required
 before_script:
   - "export JAVA_OPTS=-Xmx512m"
   - "echo $JAVA_OPTS"
   - ./opt/install-rethinkdb.sh
-# Ideally, this would be: https://github.com/travis-ci/travis-ci/issues/4411 so we could be on new container instance http://docs.travis-ci.com/user/migrating-from-legacy
+# sudo: false
 # addons:
 #   apt:
 #     sources:
 #     - ppa:rethinkdb/ppa
 #     packages:
 #     - rethinkdb
+
 script:
   - lein2 eastwood
 branches:
