Some fixes to migration file and nampspace naming to be more robust.

--- a/src/open_company/assets/migration.clj.template
+++ b/src/open_company/assets/migration.clj.template
@@ -1,4 +1,5 @@
-(ns open-company.db.migrations.MIGRATION-NAME)
+(ns open-company.db.migrations.MIGRATION-NAME
+  (:require [rethinkdb.query :as r]))
 
 (defn up [conn db-name]
   ;; Do great things
