WIP on FoCE migration.

--- a/src/open_company/assets/migration.clj.template
+++ b/src/open_company/assets/migration.clj.template
@@ -1,6 +1,6 @@
 (ns open-company.db.migrations.MIGRATION-NAME
   (:require [rethinkdb.query :as r]))
 
-(defn up [conn db-name]
+(defn up [conn]
   ;; Do great things
   true) ; return true on success
