Travis wants only `lein` now, not `lein2`?

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ cache:
 before_script:
 - "export JAVA_OPTS=-Xmx512m"
 - "echo $JAVA_OPTS"
-- lein2 clean
+- lein clean
 script:
-- lein2 test!
-- lein2 eastwood
-- lein2 kibit
+- lein test!
+- lein eastwood
+- lein kibit
 branches:
   only:
   - master
