--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ sudo: false
 jdk:
 - oraclejdk8
 lein: 2.7.1
+# Travis doesn't seem to have Rethink 2.3.6 as of 7/6/2018, so Rethink 2.3.5 here
 addons:
-  rethinkdb: '2.3.6'
+  rethinkdb: '2.3.5'
 cache:
   directories:
   - "$HOME/.m2"
