--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: clojure
 sudo: false
 jdk:
-- openjdk12
+- openjdk8
 lein: 2.9.1
 addons:
   rethinkdb: '2.3.6'
@@ -15,6 +15,7 @@ before_script:
 script:
 - lein eastwood
 - lein kibit
+- lein test!
 branches:
   only:
   - master
